[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
quote = { version = "1.0.8" }
syn = { version = "1.0.60", features = ["extra-traits", "derive"]}
proc-macro2 = { version = "1.0.24" }

